<resources>
    <string name="app_name">Geography Dash</string>
    <string name="education_game">Geography Dash</string>
    <string name="play">Play</string>
    <string name="high_scores">High Scores</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="settings_header">Settings</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="time_title">Set time</string>
    <string name="difficulty_title">Difficulty</string>

    <string name="username_title">User Name</string>
    <string name="default_username">Crazy Monkey</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="default_settings">Default</string>
    <string name="user_name">User Name</string>
    <string name="score">Score</string>
    <string name="time_left">Time Left</string>
    <string name="shakes">Shakes:</string>
    <string name="background_image">Background Image</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="try_again">Try Again</string>
    <string name="tweet">Tweet</string>
    <string name="final_score">FINAL SCORE</string>
    <string name="correct">Correct:</string>
    <string name="wrong">Wrong:</string>
    <string name="_0">0</string>

    <string-array name="easy_questions">
        <item>The body of the egyptian sphinx was based on which animal?</item>
        <item>What is the capital of Denmark?</item>
        <item>What is the only state in the United States that does not have a flag in a shape with 4 edges?</item>
        <item>What is the capital of the united states?</item>
        <item>What is the smallest country in the world?</item>
        <item>What is the capital of Scotland?</item>
        <item>What is the capital of Australia?</item>
        <item>Which small country is located between the borders of France and Spain?</item>
        <item>Where would you find the "Spanish Steps"?</item>
        <item>Which country has the biggest population?</item>
    </string-array>

    <string-array name="easy_answers">
        <item>Lion</item>
        <item>Copenhagen</item>
        <item>Ohio</item>
        <item>Washington, D.C.</item>
        <item>Vatican City</item>
        <item>Edinburgh</item>
        <item>ACT</item>
        <item>Andorra</item>
        <item>Rome</item>
        <item>China</item>
    </string-array>

    <string-array name="medium_questions">
        <item>What is the largest non-continental island in the world?</item>
        <item>What is the capital of Chile?</item>
        <item>Kuala Lumpur is the capital of which country?</item>
        <item>What African country has Portuguese as its official language?</item>
        <item>What is the capital of the State of Washington, United States?</item>
        <item>The historical city Timbuktu is located in which West African country?</item>
        <item>Which country has the abbreviation "CH"?</item>
        <item>What is the capital of New Zealand?</item>
        <item>What is the capital of Australia?</item>
        <item>Which English county will you find the University of East Anglia?</item>
    </string-array>

    <string-array name="medium_answers">
        <item>Greenland</item>
        <item>Santiago</item>
        <item>Malaysia</item>
        <item>Mozambique</item>
        <item>Olympia</item>
        <item>Mali</item>
        <item>Switzerland</item>
        <item>Wellington</item>
        <item>ACT</item>
        <item>Norfolk</item>
    </string-array>

    <string-array name="hard_questions">
        <item>In which city is the Big Nickel located in?</item>
        <item>Which of these countries are located in the Caribbean?</item>
        <item>The Hunua Ranges is located in…</item>
        <item>Fucking is a village in which country?</item>
        <item>What was the most populous Muslim-majority nation in 2010?</item>
        <item>What is the Finnish word for Finland?</item>
        <item>What is the tallest mountain in Canada?</item>
        <item>What is the largest island in Canada?</item>
        <item>What is the capital city of Bermuda?</item>
        <item>In which country is Tallinn located?</item>
    </string-array>

    <string-array name="hard_answers">
        <item>Sudbury</item>
        <item>Barbados</item>
        <item>New Zealand</item>
        <item>Austria</item>
        <item>Indonesia</item>
        <item>Suomi</item>
        <item>Logan</item>
        <item>Baffin</item>
        <item>Hamilton</item>
        <item>Estonia</item>
    </string-array>
</resources>